[package]
name = "twitch-send"
description = "Command line tool to send messages to twitch"
version = "1.0.3-alpha.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/twitch-send"
readme = "README.md"

[dependencies]
twitch-irc = "2.2.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
